# open-colorimeter-utils

./: .gitignore  README.md  pyproject.toml
examples/: ammonia_11_01_22.toml  bsa.toml  fdc_blue_1.toml  nitrate_11_01_22.toml  nitrite.toml  nitrite_11_01_22.toml
open_colorimeter_utils/: calibration_cli_app.py
