[tool.poetry]
name = "open-colorimeter-utils"
version = "0.1.0"
description = "utilities for iorodeo's open colorimeter"
authors = ["Will Dickson <wbd@caltech.edu>"]
readme = "README.md"
packages = [{include = "open_colorimeter_utils"}]

[tool.poetry.scripts]
oc-cal = "open_colorimeter_utils.calibration_cli_app:app_main"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
click = "^8.1.3"
tomli = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
